增加seperatesaleid参数