@@ -9,6 +9,7 @@
 	<packaging>jar</packaging>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                <maven.test.skip>true</maven.test.skip>
 		<java.version>1.8</java.version>
 		<!-- MyBatis Generator -->
 		<!-- Java接口和实体类 -->
@@ -173,11 +174,23 @@
 					<generateGitPropertiesFile>true</generateGitPropertiesFile>
 				</configuration>
 			</plugin>
+                        <plugin>
+                               <artifactId>maven-surefire-plugin</artifactId>
+                               <version>2.22.2</version>
+                               <configuration>
+                                   <argLine>-Djdk.attach.allowAttachSelf</argLine>
+                               </configuration>
+                        </plugin>
 		</plugins>
 	</build>
 
 	<dependencies>
-
+                <dependency>
+			<groupId>org.jmockit</groupId>
+			<artifactId>jmockit</artifactId>
+			<version>${jmockit.version}</version>
+			<scope>test</scope>
+		</dependency>
 		<!-- spring boot 基类 -->
 		<dependency>
 			<groupId>com.dili</groupId>
@@ -218,12 +231,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
-		<dependency>
-			<groupId>org.jmockit</groupId>
-			<artifactId>jmockit</artifactId>
-			<version>${jmockit.version}</version>
-			<scope>test</scope>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.junit.jupiter</groupId>
 			<artifactId>junit-jupiter-api</artifactId>
